k8s/endpoint/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: x-forwarded-proto-header
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
