k8s/endpoint/ingress.yaml
#@ load("@ytt:data", "data")
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: #@ data.values.id
  labels:
    app: #@ data.values.id
spec:
  rules:
  - host: #@ "{}.{}".format(data.values.id, data.values.lfrdevDomain)
    http:
      paths:
      - backend:
          service:
            name: #@ data.values.id
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  - host: #@ data.values.virtualInstanceId
    http:
      paths:
      - backend:
          service:
            name: #@ data.values.id
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
